frontend/src/styles.less
@import '@taiga-ui/core/styles/taiga-ui-theme.less';
@import '@taiga-ui/core/styles/taiga-ui-fonts.less';
@import '@taiga-ui/styles/taiga-ui-global.less';
@import '@taiga-ui/core/styles/taiga-ui-local.less';

// Reset css
* {
  box-sizing: border-box;
}

// taiga-ui customization
:root {
  --top-bar-height: 3.9375rem;
}

.t-root-content {
  min-height: 100vh;
}

tui-island {
  &[data-appearance='textfield'] {
    box-sizing: border-box;
    border-radius: var(--tui-radius-m);
    padding: 0.6rem var(--tui-padding-m);
    min-height: var(--tui-height-m);
    box-shadow: 0 0.125rem 0.1875rem rgba(0, 0, 0, 0.1);
    .d-flex;
    .items-center;
  }
}

// Flat destructive appearance

[tuiWrapper][data-appearance='flat-destructive'] {
  background: transparent;
  color: var(--tui-negative);

  &:hover:not(._no-hover),
  &:active:not(._no-active) {
    background: var(--tui-error-bg-hover);
  }
}

// Makes alerts appear below the top bar
tui-alert-host > .t-wrapper {
  margin-top: var(--top-bar-height);
}

form.form-skeleton [tuiWrapper],
.details-skeleton [tuiWrapper] {
  .tui-skeleton;

  &:after {
    border-radius: inherit;
  }
}

.tui-form__row_multi-fields {
  align-items: flex-start;
}

[tuiWrapper][data-appearance='textfield'] {
  .no-shadow &,
  &.no-shadow {
    box-shadow: none !important;
  }

  .no-border &,
  &.no-border {
    &:after {
      border: none !important;
    }
  }
}

.reunice-tree-item-option {
  color: var(--tui-primary);
  transition-property: color;
  transition-duration: var(--tui-duration, 0.3s);
  transition-timing-function: ease-in-out;

  &:hover,
  &._active,
  &:focus {
    color: var(--tui-primary-hover);
  }

  &._selected {
    color: var(--tui-primary);
    font-weight: bold;
  }

  input[type='radio'] {
    display: none;
  }
}

.details-skeleton .tui-form__row .t-content {
  .tui-skeleton;

  &::before {
    content: 'SKELETON_TEXT';
  }
}

.t-dropdown tui-loader.t-loader {
  min-height: 2rem;
  margin: 0.25rem 0;
}

// Utility styles
.d-flex {
  display: flex;
}

.d-inline-flex {
  display: inline-flex;
}

.d-block {
  display: block;
}

.d-none {
  display: none;
}

.items-center {
  align-items: center;
}

.justify-self-end {
  justify-self: end;
}

.justify-start {
  justify-content: flex-start !important;
}

.justify-center {
  justify-content: center;
}

.w-full {
  width: 100%;
}

.max-w-xs {
  max-width: 22rem;
}

.max-w-s {
  max-width: 34rem;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.text-underline {
  text-decoration: underline !important;
}

.text-02 {
  color: var(--tui-text-02);
}

.cursor-pointer {
  cursor: pointer;
}

.gap-4 {
  gap: 1rem;
}

.tui-space_left-auto {
  margin-left: auto;
}

// Language

html {
  --reunice-optional-text: 'Optional';

  &[lang='pl'] {
    --reunice-optional-text: 'Opcjonalne';
  }
}

label._optional .t-label .t-text {
  &::after {
    content: ' (' var(--reunice-optional-text) ')';
    color: var(--tui-text-02);
  }
}

tui-file.tui-file_with-right-icon {
  > .t-wrapper {
    align-items: center;
    flex-direction: row;
    justify-content: flex-start;
    width: 100%;

    > .t-text {
      margin-right: auto;
      max-width: ~'calc(100% - 2.75rem)';
    }
  }

  padding-right: 0.5625rem !important;
}

